# Aeroscraper-Solana

./: .env.example  .gitignore  .replit  Anchor.toml  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEVNET_COLLATERAL_SETUP.md  DEVNET_SETUP_GUIDE.md  FEE_CONTRACT_COMPARISON.md  FEE_CONTRACT_COMPREHENSIVE_TESTING.md  FEE_CONTRACT_TESTING_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  LOCAL_TESTING_GUIDE.md  NEXT_STEPS.md  ORACLE_DEVNET_DEPLOYMENT_GUIDE.md  ORACLE_FINAL_STATUS.md  ORACLE_TEST_COVERAGE_ANALYSIS.md  PRODUCTION_READINESS_REPORT.md  PROJECT_STATUS.md  PROTOCOL_LOCALNET_DEPLOYMENT_GUIDE.md  PROTOCOL_TESTING_STATUS.md  STAKING_ADDRESS.md  TESTING_GUIDE.md  TEST_FIXES_SUMMARY.md  TEST_FIX_SUMMARY.md  TEST_SUITE_STATUS.md  package-lock.json  package.json  replit.md  setup-info.sh
programs/aerospacer-fees/: Cargo.toml  README.md
programs/aerospacer-fees/src/: lib.rs  msg.rs
programs/aerospacer-fees/src/error/: mod.rs
programs/aerospacer-fees/src/instructions/: distribute_fee.rs  get_config.rs  initialize.rs  mod.rs  set_fee_addresses.rs  set_stake_contract_address.rs  toggle_stake_contract.rs
programs/aerospacer-fees/src/state/: mod.rs
programs/aerospacer-protocol/: ANALYSIS_REPORT.md  Cargo.toml
programs/aerospacer-protocol/src/: account_management.rs  fees_integration.rs  lib.rs  msg.rs  oracle.rs  sorted_troves.rs  sorted_troves_simple.rs  trove_helpers.rs  trove_management.rs  utils.rs
programs/aerospacer-protocol/src/error/: mod.rs
programs/aerospacer-protocol/src/instructions/: add_collateral.rs  borrow_loan.rs  close_node.rs  mod.rs  (+12 more)
(+123 files in other folders)
